--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,6 @@ img {
 
 #lightBox {
     display    : none;
-    
     position   : fixed;
     top        : 22.5%;
     left       : 50%;
@@ -134,6 +133,7 @@ img {
     text-align : center;
 }
 
+/* Media query */
 @media screen and (max-width: 481px){
 }
 
