--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,22 +76,6 @@ img {
     display: none;
 }
 
-.page_prev, .page_next {
-    background-color: var(--color-dark-gray);
-    color           : white;
-
-    margin-top      : 3%;
-    border          : 4px solid var(--color-text);
-    padding         : 3% 5%;
-}
-
-.page_prev {
-    float: left;
-}
-
-.page_next {
-    float: right;
-}
 
 #userStats p {
     float        : left;
@@ -104,8 +88,8 @@ img {
 }
 
 
-/* Specific to lightbox */
-#lightBox_background {
+/* Specific to scorebox */
+#scoreBox_background {
     display : none;
     opacity : 0;
 
@@ -116,7 +100,7 @@ img {
     height  : 100%;
 }
 
-#lightBox {
+#scorebox {
     display    : none;
     position   : fixed;
     top        : 22.5%;
@@ -126,7 +110,7 @@ img {
     padding    : 75px 30px;
 }
 
-#lightBox p {
+#scoreBox p {
     color      : #fff;
     font-size  : 1.15em;
     line-height: 1.5em;
